--- a/QTbank/widget.ui
+++ b/QTbank/widget.ui
@@ -6,76 +6,139 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>292</width>
+    <height>341</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Widget</string>
   </property>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>330</x>
-     <y>210</y>
-     <width>75</width>
-     <height>24</height>
+     <x>20</x>
+     <y>30</y>
+     <width>251</width>
+     <height>281</height>
     </rect>
    </property>
-   <property name="text">
-    <string>login</string>
+   <property name="title">
+    <string>로그인</string>
    </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_2">
-   <property name="geometry">
-    <rect>
-     <x>340</x>
-     <y>290</y>
-     <width>100</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>PushButton</string>
-   </property>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>110</y>
+      <width>58</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PW</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>40</y>
+      <width>58</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>ID</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>70</y>
+      <width>211</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="loginButton">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>210</y>
+      <width>91</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>로그인</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="registerButton">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>210</y>
+      <width>91</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>회원가입</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_2">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>140</y>
+      <width>211</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="echoMode">
+     <enum>QLineEdit::EchoMode::Password</enum>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
  <connections>
   <connection>
-   <sender>pushButton</sender>
+   <sender>registerButton</sender>
    <signal>clicked()</signal>
    <receiver>Widget</receiver>
-   <slot>happy()</slot>
+   <slot>registerUser()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>367</x>
-     <y>221</y>
+     <x>85</x>
+     <y>300</y>
     </hint>
     <hint type="destinationlabel">
-     <x>399</x>
-     <y>299</y>
+     <x>145</x>
+     <y>188</y>
     </hint>
    </hints>
   </connection>
   <connection>
-   <sender>pushButton_2</sender>
+   <sender>loginButton</sender>
    <signal>clicked()</signal>
    <receiver>Widget</receiver>
-   <slot>happy()</slot>
+   <slot>login()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>389</x>
-     <y>305</y>
+     <x>205</x>
+     <y>300</y>
     </hint>
     <hint type="destinationlabel">
-     <x>399</x>
-     <y>299</y>
+     <x>145</x>
+     <y>188</y>
     </hint>
    </hints>
   </connection>
  </connections>
  <slots>
-  <slot>happy()</slot>
+  <slot>login()</slot>
+  <slot>registerUser()</slot>
  </slots>
 </ui>
