--- a/QTbank/useraccountdisplay.ui
+++ b/QTbank/useraccountdisplay.ui
@@ -49,7 +49,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label_5">
+  <widget class="QLabel" name="userAccountNumber">
    <property name="geometry">
     <rect>
      <x>170</x>
@@ -75,7 +75,7 @@
     <string>출금하기</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_3">
+  <widget class="QLabel" name="accountListLabel">
    <property name="geometry">
     <rect>
      <x>340</x>
@@ -101,7 +101,7 @@
     <string>카카오뱅크</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="userName">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -114,7 +114,7 @@
     <string>사용자</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_7">
+  <widget class="QLabel" name="userBalance">
    <property name="geometry">
     <rect>
      <x>170</x>
