--- a/QTbank/useraccountdisplay.ui
+++ b/QTbank/useraccountdisplay.ui
@@ -29,7 +29,7 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>160</x>
      <y>40</y>
      <width>101</width>
      <height>16</height>
@@ -59,7 +59,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>333307293810</string>
+    <string>00000000</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_3">
@@ -124,10 +124,10 @@
     </rect>
    </property>
    <property name="text">
-    <string>300000</string>
+    <string>00000000</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="depositButton">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -155,5 +155,42 @@
   </widget>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>depositButton</sender>
+   <signal>clicked()</signal>
+   <receiver>UserAccountDisplay</receiver>
+   <slot>deposit_s()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>89</x>
+     <y>325</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>262</x>
+     <y>196</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>listView_2</sender>
+   <signal>clicked(QModelIndex)</signal>
+   <receiver>UserAccountDisplay</receiver>
+   <slot>on_item_clicked(QModelIndex)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>415</x>
+     <y>235</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>262</x>
+     <y>196</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>deposit_s()</slot>
+  <slot>on_item_clicked(QModelIndex)</slot>
+ </slots>
 </ui>
