--- a/QTbank/adminaccountdisplay.ui
+++ b/QTbank/adminaccountdisplay.ui
@@ -30,7 +30,7 @@
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>350</y>
+     <y>420</y>
      <width>61</width>
      <height>51</height>
     </rect>
@@ -43,7 +43,7 @@
    <property name="geometry">
     <rect>
      <x>190</x>
-     <y>350</y>
+     <y>420</y>
      <width>61</width>
      <height>51</height>
     </rect>
@@ -56,7 +56,7 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>350</y>
+     <y>420</y>
      <width>61</width>
      <height>51</height>
     </rect>
@@ -71,7 +71,7 @@
      <x>50</x>
      <y>50</y>
      <width>681</width>
-     <height>301</height>
+     <height>371</height>
     </rect>
    </property>
    <property name="title">
@@ -132,8 +132,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>130</y>
+      <x>10</x>
+      <y>190</y>
       <width>51</width>
       <height>31</height>
      </rect>
@@ -145,36 +145,36 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>40</y>
+      <x>20</x>
+      <y>140</y>
       <width>71</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>잔액</string>
+     <string>선택계좌 잔액</string>
     </property>
    </widget>
    <widget class="QLabel" name="userBalance">
     <property name="geometry">
      <rect>
-      <x>440</x>
-      <y>40</y>
+      <x>120</x>
+      <y>140</y>
       <width>151</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string/>
     </property>
    </widget>
    <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>80</y>
+      <x>360</x>
+      <y>20</y>
       <width>291</width>
-      <height>221</height>
+      <height>351</height>
      </rect>
     </property>
     <property name="font">
@@ -184,7 +184,7 @@
      </font>
     </property>
     <property name="title">
-     <string>입출금 내역</string>
+     <string>사용자 전체 입출금 내역</string>
     </property>
     <widget class="QListView" name="userAccountTransaction">
      <property name="geometry">
@@ -192,7 +192,7 @@
        <x>0</x>
        <y>30</y>
        <width>291</width>
-       <height>191</height>
+       <height>321</height>
       </rect>
      </property>
     </widget>
@@ -200,21 +200,21 @@
    <widget class="QLabel" name="userName">
     <property name="geometry">
      <rect>
-      <x>90</x>
+      <x>120</x>
       <y>100</y>
       <width>131</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string/>
     </property>
    </widget>
    <widget class="QListView" name="userAccountList">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>140</y>
+      <x>70</x>
+      <y>200</y>
       <width>121</width>
       <height>161</height>
      </rect>
@@ -225,9 +225,9 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>410</y>
+     <y>480</y>
      <width>681</width>
-     <height>301</height>
+     <height>231</height>
     </rect>
    </property>
   </widget>
@@ -298,11 +298,28 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>userAccountList</sender>
+   <signal>clicked(QModelIndex)</signal>
+   <receiver>AdminAccountDisplay</receiver>
+   <slot>on_item_clicked(QModelIndex)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>190</x>
+     <y>270</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>376</x>
+     <y>361</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>show_all_transaction_logs()</slot>
   <slot>show_all_withdraw_logs()</slot>
   <slot>show_all_deposit_logs()</slot>
   <slot>show_user_transations()</slot>
+  <slot>on_item_clicked(QModelIndex)</slot>
  </slots>
 </ui>
