--- a/QTbank/useraccountdisplay.ui
+++ b/QTbank/useraccountdisplay.ui
@@ -65,8 +65,8 @@
   <widget class="QPushButton" name="withDrawButton">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>290</y>
+     <x>170</x>
+     <y>200</y>
      <width>100</width>
      <height>71</height>
     </rect>
@@ -131,7 +131,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>290</y>
+     <y>200</y>
      <width>100</width>
      <height>71</height>
     </rect>
@@ -151,6 +151,19 @@
    </property>
    <property name="text">
     <string>계좌 생성</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="transferButton">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>280</y>
+     <width>231</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>송금하기</string>
    </property>
   </widget>
  </widget>
