--- a/QTbank/accounttransferwindow.ui
+++ b/QTbank/accounttransferwindow.ui
@@ -94,6 +94,9 @@
      <height>22</height>
     </rect>
    </property>
+   <property name="maximum">
+    <number>1000000000</number>
+   </property>
   </widget>
  </widget>
  <resources/>
