--- a/QTbank/userregister.ui
+++ b/QTbank/userregister.ui
@@ -36,12 +36,16 @@
        <string/>
       </property>
       <property name="echoMode">
-       <enum>QLineEdit::EchoMode::Password</enum>
+       <enum>QLineEdit::EchoMode::Normal</enum>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
-     <widget class="QLineEdit" name="lineEdit_pw"/>
+     <widget class="QLineEdit" name="lineEdit_pw">
+      <property name="echoMode">
+       <enum>QLineEdit::EchoMode::Password</enum>
+      </property>
+     </widget>
     </item>
     <item row="4" column="1">
      <widget class="QPushButton" name="registerButton">
